k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mspr2-cofrap-ingress
  namespace: mspr2-cofrap
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
  rules:
  - host: mspr2-cofrap.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-django
            port:
              number: 8000
      - path: /function
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-django
  namespace: mspr2-cofrap
spec:
  selector:
    app: frontend-django
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
